--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +23,12 @@
     "mongoose": "^5.6.7",
     "multer": "^1.4.2",
     "sharp": "^0.23.0",
+    "supertest": "^4.0.2",
     "validator": "^11.1.0"
   },
   "devDependencies": {
     "env-cmd": "^9.0.3",
+    "jest": "^24.9.0",
     "nodemon": "^1.19.1"
   }
 }
